# airtouch5-webui

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  run-mock.sh
examples/: README.md  airtouch5-controller-webui.service  airtouch5-webui.service
src/: config.rs  lib.rs  main.rs  mock.rs  templates.rs
src/airtouch/: mod.rs
src/automation/: mod.rs
src/manager/: command.rs  mod.rs  snapshot.rs
src/scenes/: mod.rs
src/web/: error.rs  mod.rs  sse.rs  state.rs  static_assets.rs  theme.rs
src/web/handlers/: ac.rs  automation.rs  mod.rs  pages.rs  zone.rs
static/css/: app.css
templates/: base.html  index.html
templates/partials/: ac.html  acs.html  automation.html  connection_state.html  system.html  zone.html  zones.html
tests/: e2e.rs
