[package]
name = "airtouch5-controller-webui"
version = "0.1.0"
edition = "2024"

[dependencies]
airtouch5 = { path = "airtouch5", features = ["control"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tower-http = { version = "0.6", features = ["trace"] }
askama = "0.12"
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

[profile.release]
# For cargo flamegraph
debug = true
